# inventory-manager

./: .gitignore  CMakeLists.txt  readme.md  todo.md
cmake/database/: initializer.sql
cmake/scripts/: fetch-cxxopts.cmake  fetch-sqlite.cmake  installation.cmake
include/: forwarder.hpp
include/database/: dberror.hpp  dbinterface.hpp  errors.hpp  interface.hpp  interface.tpp
include/product/: manager.hpp  pmanager.hpp  product.hpp  smart-product.hpp  spmanager.hpp
include/utils/: database-utils.hpp  dbutils.hpp  interface-manager.hpp  manager-item.hpp  manager.hpp  strutils.hpp
scripts/cmake/: create-database.cmake  create-initdb-target.cmake  create-install-target.cmake  create-uninstall-target.cmake  creates-initdb-target.cmake  fetch-sqlite.cmake  install-headers.cmake.in  uninstall.cmake.in
scripts/database/: initializer.sql
scripts/python/: init-db.py.in
src/: main.cpp
src/database/: dbinterface.cpp  errors.cpp  init.sql  interface.cpp
src/include/: forwarder.hpp
src/include/database/: errors.hpp  interface.hpp
src/include/product/: manager.hpp  product.hpp
src/include/utils/: dbutils.hpp  strutils.hpp
src/lib/: readme.md
src/product/: manager.cpp  pmanager.cpp  product-info.cpp  product.cpp  smart-product.cpp  spmanager.cpp
src/utils/: database-utils.cpp  dbutils.cpp  interface-manager.cpp  manager-item.cpp  manager.cpp  strutils.cpp
tests/: main  main.cpp
